@@ -3,6 +3,8 @@ Revision history for DBIx::Class
         - might_have/has_one now warn if applied calling class's column
           has is_nullable set to true.
         - Cookbook POD fix for add_drop_table instead of add_drop_tables
+        - Views without a view_definition won't be added to the
+          SQL::Translator::Schema by the parser
 
 0.08115 2009-12-10 09:02:00 (CST)
         - Real limit/offset support for MSSQL server (via Row_Number)
